# DPK-ER

./: .gitignore  LICENSE  pyproject.toml
dp_ker_lab/: __init__.py
dp_ker_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
experiments/dp_ker/: README.md
experiments/dp_ker/cache_v2_final/: metadata.json
experiments/dp_ker/data/: candidates.jsonl  knowledge_items.jsonl  labels.jsonl  profiles.jsonl
experiments/dp_ker/debug/: debug_summary.md  fixed_label_score_distribution.csv  fixed_score_direction_report.csv  label_debug_report.md  label_score_distribution.csv  match_label_source_report.md  sanity_check_pairs.md  score_direction_report.csv  threshold_sensitivity_score_direction.csv
experiments/dp_ker/debug_v2/: feature_correlation_v2.csv  full_dataset_loading_report.md  top_feature_importance_v2.csv
experiments/dp_ker/debug_v2_final/: cv_protocol_report.md  feature_correlation_v2_final.csv  label_distribution_v2_final.csv  leakage_check_strict.md  leakage_check_v2_final.md  top_feature_importance_v2_final.csv
experiments/dp_ker/results/: ablation_results.csv  ablation_results_fixed.csv  dataset_debug_report.md  dataset_statistics_fixed.csv  deprecated_full_retrieval_results.csv  deprecated_full_retrieval_table.tex  pairwise_results.csv  pairwise_results_fixed.csv  privacy_budget_results.csv  privacy_budget_results_fixed.csv  results_summary.md  results_summary_fixed.md  results_summary_v2.md  sampled_ranking_results.csv  sampled_ranking_results_fixed.csv  table_ablation_results.tex  table_dataset_statistics.tex  table_pairwise_results.tex  (+5 more)
(+43 files in other folders)
